# OggaLib

./: CMakeLists.txt  readme.md  test.cpp
include/ogga/: csvlog.hpp  element_type.hpp  random.hpp  scopetimer.hpp  stopwatch.hpp
include/print/ogga/: print.hpp
include/scopetimer/ogga/: scopetimer.hpp
include/thread_pool/ogga/: element_type.hpp  thread_pool.hpp
source/: CMakeLists.txt
source/print/: CMakeLists.txt
source/print/include/: print.hpp
source/print/src/: printTest.cpp
source/stopwatch/: CMakeLists.txt
source/stopwatch/include/: stopwatch.hpp
source/stopwatch/src/: stopwatchTest.cpp
source/thread_pool/src/: thread_poolTest.cpp
src/: dummy.cpp
test/: CMakeLists.txt  csvlog_test.cpp  printTest.cpp  print_test.cpp  random_test.cpp  scopetimerTest.cpp  scopetimer_test.cpp  stopwatchTest.cpp  stopwatch_test.cpp  thread_poolTest.cpp  thread_pool_test.cpp
